--- a/DostavkaNaMarket/Pages/Index.razor
+++ b/DostavkaNaMarket/Pages/Index.razor
@@ -183,12 +183,17 @@
                 </div>
                 <span class="text-muted">@(user.BoxAmount) руб.</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between lh-sm">
-                <div>
-                  <h6 class="my-0">Вывоз</h6>
-                </div>
-                <span class="text-muted">@(user.DeliveryPrice) руб.</span>
-              </li>
+
+              @if((user.ClientAdress != null) | (user.OfDelSell != User.OfficeOrDelivery.Sam))
+              {
+                  <li class="list-group-item d-flex justify-content-between lh-sm">
+                    <div>
+                      <h6 class="my-0">Вывоз</h6>
+                    </div>
+                    <span class="text-muted">@(user.DeliveryPrice) руб.</span>
+                  </li>
+              }
+
               <li class="list-group-item d-flex justify-content-between">
                 <span>Итого</span>
                 <strong>@(user.FinalAmount) руб.</strong>
@@ -210,7 +215,7 @@
             </div>
 
             <div class="col-12">
-              <button class="w-100 btn btn-secondary btn-lg" type="button" @attributes="user.InputAttributesSubmit">Создать заявку</button>
+              <button class="w-100 btn btn-secondary btn-lg" type="button" value="" @attributes="user.InputAttributesSubmit" @onclick="StepPreview">Создать заявку</button>
           </div>
           </div>
       </div>
@@ -227,9 +232,49 @@
 
 @code{
     User user = new User();
+
     void Create()
     {
-        Console.WriteLine(user.ClientPhone);
+        Console.WriteLine($"Город: {user.CitySell}");
+
+        if(user.DateSell == User.Date.Среда)
+        {
+            Console.WriteLine($"Отправка в: {user.dateWednesday.ToString("dddd dd MMMM yyyy")}");
+        }
+        else if(user.DateSell == User.Date.Понедельник)
+        {
+            Console.WriteLine($"Отправка в: {user.dateMonday.ToString("dddd dd MMMM yyyy")}");
+        }
+
+        Console.WriteLine($"ФИО: {user.ClientName}");
+        Console.WriteLine($"Номер телефона: {user.ClientPhone}");
+        Console.WriteLine($"Адрес электронной почты: {user.ClientMail}");
+
+        if(user.OfDelSell == User.OfficeOrDelivery.Sam)
+        {
+            Console.WriteLine($"Способ получения: Привезет самостоятельно");
+        }
+        else if(user.OfDelSell == User.OfficeOrDelivery.Vivoz)
+        {
+            Console.WriteLine($"Способ получения: Нужен вывоз");
+            Console.WriteLine($"Адрес: {user.ClientAdress}");
+        }
+
+        if(user.PayMet == User.PaymentMethod.Cash)
+        {
+            Console.WriteLine($"Способ оплаты: Наличные");
+        }
+        else if(user.PayMet == User.PaymentMethod.Card)
+        {
+            Console.WriteLine($"Способ оплаты: Карта");
+        }
+
+        Console.WriteLine($"Итого к оплате {user.FinalAmount}");
+    }
+
+    void StepPreview()
+    {
+        
     }
 
 }
