--- a/DostavkaNaMarket/Pages/Index.razor
+++ b/DostavkaNaMarket/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using DostavkaNaMarket.Data
 @using DostavkaNaMarket.Models
+@inject NavigationManager NavigationManager
 
 
 <PageTitle>Добавить поставку</PageTitle>
@@ -14,7 +15,7 @@
     <div class="row g-5">
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-primary">Данные водителя</span>
+          <span class="mb-3">Данные водителя</span>
         </h4>
         <ul class="list-group mb-3">
           <li class="list-group-item d-flex justify-content-between lh-sm">
@@ -42,7 +43,7 @@
       </div>
 
       <div class="col-md-7 col-lg-7">
-        <h4 class="mb-3 text-primary">Данные поставки</h4>
+        <h4 class="mb-3">Данные поставки</h4>
           <div class="row g-3">
             <div class="col-3">
               <label for="city" class="form-label">Город</label>
@@ -231,7 +232,7 @@
 </EditForm>
 
 @code{
-    User user = new User();
+    public User user = new User();
 
     void Create()
     {
@@ -274,6 +275,10 @@
 
     void StepPreview()
     {
+        if (user.InputAttributesSubmit.ContainsValue("submit"))
+        {
+            NavigationManager.NavigateTo("preview");
+        }
         
     }
 
