--- a/DostavkaNaMarket/Shared/NavMenu.razor
+++ b/DostavkaNaMarket/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Условия
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="preview">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Preview
+            </NavLink>
+        </div>
     </nav>
 </div>
 
