--- a/DostavkaNaMarket/Pages/Counter.razor
+++ b/DostavkaNaMarket/Pages/Counter.razor
@@ -11,11 +11,13 @@
 
 @code {
     private int currentCount = 0;
+    MongoDB mon = new();
 
     private void IncrementCount()
     {
-        var logger = LoggerFactory.CreateLogger<Counter>();
-        logger.LogWarning($"Someone has clicked me! {currentCount}");
+        //var logger = LoggerFactory.CreateLogger<Counter>();
+        //logger.LogWarning($"Someone has clicked me! {currentCount}");
         currentCount++;
+        mon.AllDocCount();
     }
 }
