--- a/DostavkaNaMarket/Pages/Index.razor
+++ b/DostavkaNaMarket/Pages/Index.razor
@@ -235,9 +235,10 @@
 </EditForm>
 
 @code{
-    public User user = new User();
+    User user = new User();
+    MongoDB mongo = new MongoDB();
 
-    string connectionString = "mongodb://localhost:27017";
+    //string connectionString = "mongodb://localhost:27017";
 
     public void Create()
     {
@@ -271,12 +272,9 @@
             user.paymentMethodDB = "Карта";
         }
 
-        
+        user.orderNum = mongo.AllDocCount() + 1;
 
-        MongoClient client = new MongoClient(connectionString);
-        IMongoDatabase database = client.GetDatabase("test");
-        var collection = database.GetCollection<BsonDocument>("users");
-
+        //Добавляем данные в БД
         BsonDocument doc = new BsonDocument 
         { 
             {"orderNum",$"{user.orderNum}"},
@@ -291,18 +289,20 @@
             {"finalAmount",$"{user.FinalAmount}"},
             {"barcodes", new BsonArray(user.AllNumbersBarcode)}
         };
-        collection.InsertOne(doc);
-        Console.WriteLine(doc.IndexOfName("orderNum"));
+
+        mongo.AddDoc(doc).GetAwaiter();
+        
+        //Console.WriteLine(doc.IndexOfName("orderNum"));
 
         
         var dictionary = doc.ToDictionary();
         string? numb = dictionary["orderNum"].ToString();
         int numbInt = Convert.ToInt32(numb);
-        if(numbInt > 0)
-        {
-            user.orderNum += 1;
-        }
-        Console.WriteLine(numb);
+        //if(numbInt > 0)
+        //{
+        //    user.orderNum += 1;
+        //}
+        //Console.WriteLine(numb);
 
 
         //for(int i = 0; i < numbInt; i++)
