--- a/DostavkaNaMarket/Pages/Contacts.razor
+++ b/DostavkaNaMarket/Pages/Contacts.razor
@@ -1,7 +1,7 @@
 ﻿@page "/contacts"
 @inject ILoggerFactory LoggerFactory
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Контакты</PageTitle>
 
 <h1>Counter</h1>
 
