--- a/DostavkaNaMarket/Pages/Admin.razor
+++ b/DostavkaNaMarket/Pages/Admin.razor
@@ -1,7 +1,42 @@
 ﻿@page "/admin"
 
-<h3>Admin</h3>
 
+<div class="text-center">
+    
+<main class="form-signin">
+
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col-6">
+            <img class="mb-4" src="/Admin.svg" alt="" width="200" height="200">
+            <h1 class="h3 mb-3 fw-normal">Ещё раз сюда позвонишь, я тебе глаза паяльником выжгу</h1>
+
+            <div class="form-floating">
+              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <label for="floatingInput">Адрес эл. почты</label>
+            </div>
+            <div class="form-floating">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <label for="floatingPassword">Пароль</label>
+            </div>
+
+            <div class="checkbox mb-3">
+              <label>
+                <input type="checkbox" value="remember-me"> Запомнить меня
+              </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
+            <p class="mt-5 mb-3 text-muted">© 2021–2022 Доставка на маркет</p>       
+                </div>
+                <div class="col">
+                </div>
+    </div>
+
+    
+</main>
+
+</div>
 @code {
 
 }
