буду изменять струскуру проета для создания аутентификации

--- a/DostavkaNaMarket/_Imports.razor
+++ b/DostavkaNaMarket/_Imports.razor
@@ -10,5 +10,6 @@
 @using DostavkaNaMarket.Shared
 @using DostavkaNaMarket.Models
 @using DostavkaNaMarket.Pages
+@using Microsoft.AspNetCore.Components.Authorization
 
 
