--- a/DostavkaNaMarket/Pages/Admin.razor
+++ b/DostavkaNaMarket/Pages/Admin.razor
@@ -1,5 +1,10 @@
 ﻿@page "/admin"
 
+@using DostavkaNaMarket.Models
+@using DostavkaNaMarket.Pages
+@using MongoDB.Bson
+@using MongoDB.Driver
+
 
 <div class="text-center">
     
@@ -8,9 +13,8 @@
     <div class="row">
         <div class="col">
         </div>
-        <div class="col-6">
+        <div class="col-3">
             <img class="mb-4" src="/Admin.svg" alt="" width="200" height="200">
-            <h1 class="h3 mb-3 fw-normal">Ещё раз сюда позвонишь, я тебе глаза паяльником выжгу</h1>
 
             <div class="form-floating">
               <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -37,6 +41,7 @@
 </main>
 
 </div>
+
 @code {
 
 }
