--- a/DostavkaNaMarket/Pages/Contacts.razor
+++ b/DostavkaNaMarket/Pages/Contacts.razor
@@ -1,5 +1,7 @@
 ﻿@page "/contacts"
-@inject ILoggerFactory LoggerFactory
+@inject ILoggerFactory LoggerF
+@attribute [Authorize]
+
 
 <PageTitle>Контакты</PageTitle>
 
@@ -8,6 +10,7 @@
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
 
 @code {
     private int currentCount = 0;
