--- a/DostavkaNaMarket/Shared/NavMenu.razor
+++ b/DostavkaNaMarket/Shared/NavMenu.razor
@@ -25,8 +25,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="admin">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> admin
+            <NavLink class="nav-link" href="login">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> login
             </NavLink>
         </div>
     </nav>
