--- a/DostavkaNaMarket/Pages/_Layout.cshtml
+++ b/DostavkaNaMarket/Pages/_Layout.cshtml
@@ -12,6 +12,9 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="DostavkaNaMarket.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/boxed-check.min.css">
+
+    <script src="_content/BlazorDateRangePicker/clickAndPositionHandler.js"></script>
+    <link rel="stylesheet" href="_content/BlazorDateRangePicker/daterangepicker.min.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
